objects/Projects__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Look up the property address of the project</inlineHelpText>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Enter the name of the contractor who is working on the project</inlineHelpText>
        <label>Contractor</label>
        <referenceTo>Contractors__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Enter the end date of the project, put in an estimated one until the project is completed</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan #</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Cost__c</fullName>
        <label>Project Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Enter a brief (few words) description of the project. Additional information can be added in the Project Notes box</inlineHelpText>
        <label>Project Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <inlineHelpText>Enter in details about the specific project</inlineHelpText>
        <label>Project Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Remainder__c</fullName>
        <formula>Project_Cost__c  -  Total_Drawn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Remainder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Retainer__c</fullName>
        <label>Project Retainer</label>
        <summarizedField>Loan_Disbursement__c.Retainer_Amount__c</summarizedField>
        <summaryForeignKey>Loan_Disbursement__c.Project_number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Retainer_to_be_Released__c</fullName>
        <formula>Project_Retainer__c  -  Retainer_Drawn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Retainer to be Released</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retainer_Drawn__c</fullName>
        <description>To calculate how much retainer is left to be released</description>
        <inlineHelpText>Compare to &quot;Project Retainer&quot; field to know how much retainer should be paid</inlineHelpText>
        <label>Retainer Drawn</label>
        <summarizedField>Loan_Disbursement__c.Retainer_Draw_Amount__c</summarizedField>
        <summaryForeignKey>Loan_Disbursement__c.Project_number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Entered the start date of the project</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Drawn__c</fullName>
        <label>Total Drawn</label>
        <summarizedField>Loan_Disbursement__c.Draw_Amount__c</summarizedField>
        <summaryForeignKey>Loan_Disbursement__c.Project_number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contractor__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Address__c</columns>
        <columns>Loan_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{MM}-{DD}-{YYYY}-{0}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>